--- a/index.html
+++ b/index.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<style>
+  i.fb,       span.fb{     color: #3b5998; }
+</style>
   <meta charset="UTF-8">
+  <meta property="og:image" content="http://allsoft.ru/bitrix/templates/allsoft2011/images/8let/dragon_normal.jpg" />
+  <meta property="og:title" content="Я – лицензионный Дракон!" />
+  <meta property="og:description" content="Результат теста: Дракон почти Ваш «конек»! Вы пока не можете преподавать Драконоведение, но на верном пути!" />
   <title>NY Party</title>
   <link rel="stylesheet" href="./css/main.css">
   <script src="./js/vendor/jquery-2.1.4.min.js"></script>
   <script src="./js/vendor/flipclock.min.js"></script>
 </head>
 <body>
+<script type="text/javascript" src="http://yastatic.net/es5-shims/0.0.2/es5-shims.min.js" charset="utf-8"></script>
+<script type="text/javascript" src="http://yastatic.net/share2/share.js" charset="utf-8"></script>
+<div class="ya-share2" data-services="vkontakte,facebook"></div>
+<a
+    class="btn btn-default"
+    target="_blank"
+    title="On Facebook"
+    href="http://www.facebook.com/sharer.php?u=_URL_&t=NEW Year"
+  >
+    sadasd
+  </a>
   <div class="countdown">
     <div class="countdown__logo">
       <video class="countdown__logo-item" autoplay loop>
