--- a/index.html
+++ b/index.html
@@ -1,38 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html prefix="og: http://ogp.me/ns#" lang="en">
 <head>
-<style>
-  i.fb,       span.fb{     color: #3b5998; }
-</style>
   <meta charset="UTF-8">
-  <meta property="og:image" content="http://allsoft.ru/bitrix/templates/allsoft2011/images/8let/dragon_normal.jpg" />
-  <meta property="og:title" content="Я – лицензионный Дракон!" />
-  <meta property="og:description" content="Результат теста: Дракон почти Ваш «конек»! Вы пока не можете преподавать Драконоведение, но на верном пути!" />
-  <title>NY Party</title>
+  <title>CHRISTMAS & NEW YEAR PARTY</title>
+  <meta property="og:title" content="Great Party coming soon !" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="http://www.symphony-solutions.eu/ny-party-countdown/" />
+  <meta property="og:image" content="http://www.symphony-solutions.eu/ny-party-countdown/img/social-logo.jpg" />
   <link rel="stylesheet" href="./css/main.css">
   <script src="./js/vendor/jquery-2.1.4.min.js"></script>
   <script src="./js/vendor/flipclock.min.js"></script>
+  
 </head>
 <body>
-<script type="text/javascript" src="http://yastatic.net/es5-shims/0.0.2/es5-shims.min.js" charset="utf-8"></script>
-<script type="text/javascript" src="http://yastatic.net/share2/share.js" charset="utf-8"></script>
-<div class="ya-share2" data-services="vkontakte,facebook"></div>
-<a
-    class="btn btn-default"
-    target="_blank"
-    title="On Facebook"
-    href="http://www.facebook.com/sharer.php?u=_URL_&t=NEW Year"
-  >
-    sadasd
-  </a>
+
+  <script type="text/javascript" src="http://yastatic.net/es5-shims/0.0.2/es5-shims.min.js" charset="utf-8"></script>
+  <script type="text/javascript" src="http://yastatic.net/share2/share.js" charset="utf-8"></script>
+  
+  <div class="ya-share2 facebook-icon" data-services="facebook"></div>
   <div class="countdown">
     <div class="countdown__logo">
-      <video class="countdown__logo-item" autoplay loop>
+      <div class="countdown__logo-item" > 
+        <img src="./img/logo-compressor.gif" alt="">
+      </div>
+      <!-- <video class="countdown__logo-item" autoplay loop>
         <source src="./img/logo_vid.webm" type="video/webm">
         <source src="./img/logo_vid.mp4" type="video/mp4" />        
         <source src="./img/logo_vid.ogv" type="video/ogv" />
         Your browser does not support the video tag.
-      </video>
+      </video> -->
     </div>
     <div class="countdown__text">
       <img class="countdown__text-item" src="./img/party-intro_img.png" alt=""/>
